# test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cat_app/api/: consumers.py  functions.py  models.py  permissions.py  routing.py  serializers.py  urls.py  views.py
cat_app/cat_app/: asgi.py  settings.py  urls.py  wsgi.py
cat_app/messenger/: models.py  urls.py
cat_app/messenger/templates/: index.html
cat_app/static/: chunk-66ZSMOM6.js  chunk-DSEBWOIN.js  chunk-KDYLE4OC.js  index.html  styles-F3WAL2CM.css
frontend/cat_app_client/: README.md  angular.json  package-lock.json  package.json
frontend/cat_app_client/src/: index.html  styles.css
frontend/cat_app_client/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/cat_app_client/src/app/auth/: auth.guard.ts  auth.service.ts
frontend/cat_app_client/src/app/components/login-form/: login-form.component.html  login-form.component.ts
frontend/cat_app_client/src/app/components/register-form/: register-form.component.html  register-form.component.ts
frontend/cat_app_client/src/app/data/: cat.ts  catPopupContext.ts  chat.ts  message.ts
frontend/cat_app_client/src/app/global-popup/: global-popup.component.html  global-popup.component.ts
frontend/cat_app_client/src/app/pages/home/: home.component.html  home.component.ts  home.module.ts  home.routes.ts
frontend/cat_app_client/src/app/services/: cats.service.ts  chats.service.ts  messages.service.ts  popup.service.ts  search-users.service.ts
nginx/: default.conf
(+24 files in other folders)
